testdata/test/resources/com/yafred/asn1/test/should-fail/set_extension_not_ordered.asn
-- FAILS: extension tagging must be canonicaly ordered

Set DEFINITIONS IMPLICIT TAGS ::= BEGIN

Root ::= SET {
un [0] BOOLEAN,
deux [1] BOOLEAN,

...,
trois [4] BOOLEAN,
quatre [3] BOOLEAN
}


END